--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <head></head>
 <body>
-<img src="logo.png" width="1000" height="750" xstyle="vertical-align:middle" alt="You fucking pervert."></a>
+<img src="logo.png" xstyle="vertical-align:middle" alt="You fucking pervert."></a>
 </body>
 </html>
